# ArchiNote

./: .gitignore  CMakeLists.txt  README.md
ArchiNote/: OverView.md  RAIIStylePointer.hpp
ArchiNote/ArchiNoteAdmin/: ArchiNoteAdmin.hpp  IArchiNoteManager.hpp
ArchiNote/ArchiNoteAttribute/: ProjcetBriefAttributes.hpp
ArchiNote/ArchiNoteAttribute/ProjectBriefAttributes/: VersionedAssumption.hpp  VersionedConstraint.hpp  VersionedHighLevelFeature.hpp  VersionedKeyObjective.hpp  VersionedPainPoint.hpp  VersionedProjectOverview.hpp  VersionedReviewChecklist.hpp  VersionedRisk.hpp  VersionedSuccessMetric.hpp  VersionedTargetAudience.hpp
ArchiNote/ArchiNoteAttributeRepoAgent/: IAttributeRepoAgent.hpp
ArchiNote/ArchiNoteAttributeRepoAgent/ProjectBriefAttributeRepoAgent/: AssumptionsRepoAgent.hpp  ConstraintsRepoAgent.hpp  HighLevelFeaturesRepoAgent.hpp  ObjectivesRepoAgent.hpp  PainPointsRepoAgent.hpp  ProjectOverviewRepoAgent.hpp  ReviewChecklistRepoAgent.hpp  RiskRepoAgent.hpp  SuccessMetricsRepoAgent.hpp  TargetAudienceRepoAgent.hpp
ArchiNote/ArchiNoteManager/: IArchiNoteManager.hpp.md
ArchiNote/ArchiNoteManager/ProjectBriefManager/: ProjectBriefArchiNoteManager.hpp
ArchiNote/ArchiNoteStorage/: IStorageAdapter.hpp
ArchiNote/ArchiNoteStorage/HDF5StorageAdapter/: HDF5StorageAdapter.hpp
ArchiNote/Enums/: ArchiNoteAttributeRelationType.hpp  ArchiNoteAttributeType.hpp  ArchiNoteType.hpp  AttributeContentDataType.hpp  ObjectiveSubType.hpp  RiskSubType.hpp
ArchiNote/Structs/: AttributeMetadata.hpp  ExportEvent.hpp  UpdateEvent.hpp  ValidationEvent.hpp
ArchiNote/Structs/ProjectBriefContent/: AssumptionContent.hpp  ConstraintContent.hpp  HighLevelFeatureContent.hpp  ObjectiveContent.hpp  PainPointContent.hpp  ProjectOverviewContent.hpp  ReviewChecklistContent.hpp  RiskContent.hpp  SuccessMetricContent.hpp  TargetAudienceContent.hpp
KGraph/: KGraph.cpp  KGraph.hpp
SupportingTypes/: EAttributeContentType.hpp  EAttributeType.hpp  EKGNodeType.hpp  EKGPathType.hpp  EKGRelation.hpp  GraphOrchestrator.cpp  GraphOrchestrator.hpp  KGBaseNode.cpp  KGBaseNode.hpp  KGEdge.cpp  KGEdge.hpp  KGPath.cpp  KGPath.hpp  KGStructuredAttribute.cpp  KGStructuredAttribute.hpp  NodePipelineManager.cpp  NodePipelineManager.hpp  Struture.md
